updated admin help center

--- a/admin/templates/admin_help_center.html
+++ b/admin/templates/admin_help_center.html
@@ -6,7 +6,7 @@
 
 {% block title %}Admin Help Center - Vedfolnir{% endblock %}
 
-{% block extra_head %}
+{% block head %}
 <style>
     .help-section {
         background: white;
@@ -646,7 +646,7 @@
 </div>
 {% endblock %}
 
-{% block extra_js %}
+{% block scripts %}
 <script>
 // Help Center JavaScript
 function showSection(sectionId) {
